--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,52 @@
 .App {
-  text-align: center;
+  display: flex;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.App > div {
+  flex: 1;
+  padding: 0 70px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+nav {
+  background-color: whitesmoke;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex: 0 1 150px;
+  height: 100vh;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+ul {
+  list-style-type: none;
+  padding: initial;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  gap: 12px;
 }
 
-.App-link {
-  color: #61dafb;
+nav > ul {
+  gap: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+nav a {
+  text-decoration: none;
+  color: gray;
+}
+
+nav a.active {
+  color: hotpink;
+}
+
+.new-post-container {
+  display: flex;
+}
+
+.new-post-container > form {
+  margin-right: 50px;
+}
+
+.new-post-container > form > div {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
 }
